# Apotheosis

./: .gitignore  AGENTS.md  Apotheosis.sln  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  niubipid.cpp  niubipid.hpp  pid.cpp
Apotheosis/: Apotheosis.cpp  Apotheosis.h  Apotheosis.vcxproj  Apotheosis.vcxproj.filters
Apotheosis/auth/: auth_client.cpp  auth_client.h  auth_state.cpp  auth_state.h
Apotheosis/capture/: auto_capture.cpp  auto_capture.h  capture.cpp  capture.h  capture_card.cpp  capture_card.h  capture_utils.cpp  capture_utils.h  eth_capture.cpp  eth_capture.h  gpu_color_ops.cu  gpu_color_ops.h  gpu_h264_decoder.cpp  gpu_h264_decoder.h  gpu_jpeg_decoder.cpp  gpu_jpeg_decoder.h  mf_capture.cpp  mf_capture.h  opencv_capture.cpp  opencv_capture.h  tcp_capture.cpp  tcp_capture.h  udp_capture.cpp  udp_capture.h
Apotheosis/capture/avermedia/: avermedia_capture.cpp  avermedia_capture.h  avermedia_sdk.cpp  avermedia_sdk.h
Apotheosis/config/: config.cpp  config.h
Apotheosis/crosshair/: color_picker.cpp  color_picker.h  crosshair_detector.cpp  crosshair_detector.h  crosshair_runtime.cpp  crosshair_runtime.h  flashlight_detector.cpp  flashlight_detector.h  flashlight_runtime.cpp  flashlight_runtime.h  flashlight_tracker.cpp  flashlight_tracker.h  flashlight_tuning.cpp  flashlight_tuning.h  glass_filter.cpp  glass_filter.h  glass_runtime.cpp  glass_runtime.h  glass_tuning.cpp  glass_tuning.h  laser_detector.cpp  laser_detector.h
Apotheosis/depth/: depth_anything_trt.cpp  depth_anything_trt.h  depth_mask.cpp  depth_mask.h  depth_utils.cpp  depth_utils.h
Apotheosis/detector/: cuda_preprocess.cu  cuda_preprocess.h  detection_buffer.h  dml_detector.cpp  dml_detector.h  i_detector.h  model_inspector.cpp  model_inspector.h  postProcess.cpp  postProcess.h  trt_detector.cpp  trt_detector.h
Apotheosis/include/: adaptive_reactive_tracker.h  aim_kalman.h  other_tools.h
Apotheosis/include/legacy/: aim_kalman_legacy.h
Apotheosis/keyboard/: keyboard_listener.cpp  keyboard_listener.h
Apotheosis/macro/: ghub_api.cpp  ghub_api.h  lua_runtime.cpp  lua_runtime.h  macro_input.cpp  macro_input.h  macro_keymap.cpp  macro_keymap.h
Apotheosis/mem/: gpu_image.cpp  gpu_image.h  gpu_resource_manager.h
Apotheosis/model_crypto/: model_crypto.cpp  model_crypto.h
Apotheosis/modules/lua-5.1.5/: fetch_lua.ps1
Apotheosis/mouse/: AimbotTarget.cpp  AimbotTarget.h  Arduino.cpp  KmboxAConnection.cpp  KmboxAConnection.h  Makcu.cpp  Makcu.h  aim_controller.h  aim_path.h  bezier_aim_controller.cpp  bezier_aim_controller.h  boss_aim.cpp  boss_aim.h  ghub.cpp  kmboxNetConnection.cpp  kmboxNetConnection.h  latest_move_slot.h  mouse.cpp  mouse.h  movers.cpp  movers.h  movers_classic.cpp  movers_yaoguang.cpp  pid_controller.h
Apotheosis/mouse/ava_exact/: aim_key_selector.cpp  aim_key_selector.hpp  aim_movement_pipeline_exact.cpp  aim_movement_pipeline_exact.hpp  controller_orchestration_exact.cpp  controller_orchestration_exact.hpp  hotkey_eval_exact.cpp  hotkey_eval_exact.hpp  humanization_math_exact.cpp  humanization_math_exact.hpp  key_vk_table_exact.cpp  mouse_output_exact.cpp  mouse_output_exact.hpp  pid_input_pipeline.cpp  pid_input_pipeline.hpp  pidf_axis_policy_exact.cpp  pidf_axis_policy_exact.hpp  pidf_mode1_exact.cpp  pidf_mode1_exact.hpp  pidf_mode2_exact.cpp  pidf_mode2_exact.hpp  pidf_postprocess_exact.cpp  pidf_postprocess_exact.hpp  pidf_update_exact.cpp  pidf_update_exact.hpp  process_humanization_exact.cpp  process_humanization_exact.hpp  qx_curve_config_exact.cpp  qx_curve_config_exact.hpp  qx_curve_step_exact.cpp  qx_curve_target_reset_exact.cpp  target_region_exact.cpp  (+13 more)
Apotheosis/overlay/: app_log.cpp  app_log.h  config_dirty.cpp  draw_ai.cpp  draw_auth.cpp  draw_capture.cpp  draw_crosshair.cpp  draw_debug.cpp  draw_depth.cpp  draw_detection_preview.cpp  draw_hardware.cpp  draw_hotkeys.cpp  draw_log.cpp  draw_model_tools.cpp  draw_overlay.cpp  draw_session.cpp  draw_settings.h  draw_stats.cpp  draw_target.cpp  overlay.cpp  overlay.h  overlay_image.cpp  overlay_image.h  preview_window.cpp  preview_window.h
Apotheosis/runtime/: active_hotkey.cpp  active_hotkey.h  aim_telemetry.cpp  aim_telemetry.h  config_snapshot.cpp  config_snapshot.h  cuda_availability.cpp  cuda_availability.h  event_orchestrator.cpp  event_orchestrator.h  inference_session.cpp  inference_session.h  mouse_thread_loop.cpp  thread_loops.h
Apotheosis/scr/: file_picker.cpp  file_picker.h  other_tools.cpp
Apotheosis/tensorrt/: nvinf.cpp  nvinf.h  trt_monitor.h
docs/: Apotheosis调参文档.html  art-design.md  build.md  config.md  guides.md  launcher_preview.html  tuning.md  tuning_guide.html
qt_ui/: .gitignore  CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
qt_ui/config/: ConfigManager.cpp  ConfigManager.h  config_bridge.cpp  config_bridge.h
qt_ui/pages/: AiModelPage.cpp  AiModelPage.h  AutoCapturePage.cpp  AutoCapturePage.h  CapturePage.cpp  CapturePage.h  CrosshairPage.cpp  CrosshairPage.h  DebugPage.cpp  DebugPage.h  DepthPage.cpp  DepthPage.h  EventPage.cpp  EventPage.h  FlashlightPage.cpp  FlashlightPage.h  GlassFilterPage.cpp  GlassFilterPage.h  HardwarePage.cpp  HardwarePage.h  HotkeyPage.cpp  HotkeyPage.h  LinksPage.cpp  LinksPage.h  LogPage.cpp  LogPage.h  MacroPage.cpp  MacroPage.h  ModelToolsPage.cpp  ModelToolsPage.h  OverviewPage.cpp  OverviewPage.h  SessionPage.cpp  SessionPage.h  StatsPage.cpp  StatsPage.h  TargetPage.cpp  TargetPage.h
qt_ui/preview/: CMakeLists.txt  PreviewWindow.cpp  PreviewWindow.h  preview.qss  preview_main.cpp
qt_ui/style/: theme.qss
qt_ui/widgets/: AdaptiveStack.h  BezierEditor.cpp  BezierEditor.h  CardWidget.cpp  CardWidget.h  FormKit.cpp  FormKit.h  FreehandCurveEditor.cpp  FreehandCurveEditor.h  IconFont.cpp  IconFont.h  LoginDialog.cpp  LoginDialog.h  MetricCard.cpp  MetricCard.h  NeuralCurveTrainer.cpp  NeuralCurveTrainer.h  SideNav.cpp  SideNav.h  StatusBar.cpp  StatusBar.h  StatusPill.cpp  StatusPill.h  TelemetryChart.cpp  TelemetryChart.h  ToggleSwitch.cpp  ToggleSwitch.h  TopNavBar.cpp  TopNavBar.h
tools/: build_opencv_cuda.ps1
(+10 files in other folders)
